cilium-cli/connectivity/manifests/echo-ingress-icmp.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: client-ingress-from-client2-icmp
spec:
  description: "Allow other client to contact another client via ICMP"
  endpointSelector:
    matchLabels:
      kind: client
  ingress:
  - fromEndpoints:
    - matchLabels:
        other: client
    icmps:
    - fields:
      - family: IPv4
        type: 8
      - family: IPv6
        type: 128
